Added functionality to Lyric Fragment and Quote Fragment

--- a/app/src/main/res/layout/fragment_lyric.xml
+++ b/app/src/main/res/layout/fragment_lyric.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
-    tools:context=".search.lyric.LyricFragment">
+    android:fillViewport="true"
+    android:overScrollMode="never">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/fragmentsContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:paddingTop="20dp"
+        android:paddingBottom="30dp"
+        android:orientation="vertical"/>
 
 </androidx.core.widget.NestedScrollView>
