Added Movie Fragment

--- a/app/src/main/res/layout/fragment_quote.xml
+++ b/app/src/main/res/layout/fragment_quote.xml
@@ -10,9 +10,10 @@
     <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingStart="@dimen/app_padding"
-        android:paddingEnd="@dimen/app_padding">
+        android:paddingEnd="@dimen/app_padding"
+        android:paddingBottom="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,10 +22,11 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="55dp"
-                android:layout_height="50dp"
+                android:layout_width="53dp"
+                android:layout_height="45dp"
                 android:src="@drawable/ic_quote"
                 android:scaleType="fitCenter"
+                android:paddingTop="4dp"
                 android:paddingStart="@dimen/app_padding" />
 
             <TextView
@@ -32,10 +34,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_gravity="center"
-                android:padding="10dp"
-                android:text="@{lyricViewModel.currentLyricItem.mainLangSentence}"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingEnd="@dimen/app_padding"
+                android:paddingStart="10dp"
+                android:text="@{lyricViewModel.currentExtendedLyricItem.mainLangSentence}"
                 android:textColor="?attr/colorPrimaryVariant"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
 
         </LinearLayout>
 
