--- a/app/src/main/res/layout/fragment_choose_language.xml
+++ b/app/src/main/res/layout/fragment_choose_language.xml
@@ -32,8 +32,7 @@
                 android:background="@drawable/circle"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/invisibleTextView"
-                app:layout_constraintBottom_toBottomOf="@id/invisibleTextView"
-                />
+                app:layout_constraintBottom_toBottomOf="@id/invisibleTextView" />
 
             <TextView
                 android:id="@+id/headerText"
@@ -54,7 +53,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="invisible"
-                android:text="A"
                 android:textStyle="bold"
                 android:textSize="22sp"
                 app:layout_constraintTop_toTopOf="parent"
