--- a/app/src/main/res/layout/fragment_search_field.xml
+++ b/app/src/main/res/layout/fragment_search_field.xml
@@ -31,10 +31,8 @@
             android:hint="@string/search"
             android:imeOptions="actionSearch"
             android:background="@android:color/transparent"
-            android:paddingStart="6dp"
-            android:paddingEnd="6dp"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
+            android:paddingHorizontal="6dp"
+            android:paddingVertical="15dp"
             android:inputType="text"
             android:textSize="16sp"
             android:maxLines="1"
