--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -13,8 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/app_padding"
-        android:paddingEnd="@dimen/app_padding"
+        android:paddingHorizontal="@dimen/app_padding"
         android:paddingBottom="20dp"
         tools:context=".search.lyric.movie.MovieFragment"
         android:orientation="vertical">
@@ -57,7 +56,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{movieViewModel.movieItem.mainTitle}"
-                        android:textColor="?attr/colorPrimaryVariant"
+                        android:textColor="?attr/colorPrimaryDark"
                         android:maxLines="1"
                         android:paddingEnd="@dimen/app_padding"
                         android:ellipsize="end"
