Changed Lyric Fragment to BottomSheetDialogFragment

--- a/app/src/main/res/drawable/ripple_vocabulary_backgr.xml
+++ b/app/src/main/res/drawable/ripple_vocabulary_backgr.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/translation_gray">
+    android:color="@color/lyric_gray_dark">
 
     <item android:id="@android:id/background">
 
