--- a/app/src/main/res/layout/fragment_lyric.xml
+++ b/app/src/main/res/layout/fragment_lyric.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:layout_height="wrap_content"
+    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
     android:fillViewport="true"
     android:overScrollMode="never">
 
     <LinearLayout
         android:id="@+id/fragmentsContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:animateLayoutChanges="true"
-        android:paddingTop="27dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="30dp"
         android:paddingBottom="30dp"
         android:orientation="vertical">
 
@@ -25,6 +25,7 @@
             android:textColor="?attr/colorPrimaryVariant"
             android:textSize="17sp"
             android:text="@string/details"/>
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
