--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,9 +9,19 @@
         <item name="colorSecondary">@color/background_gray</item>
         <item name="colorSecondaryVariant">@color/dark_blue</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="colorAccent">@color/light_blue</item>
+        <item name="colorPrimaryDark">@color/header_gray</item>
+        <item name="colorOnSurface">@color/paragraph_gray</item>
 
         <item name="android:statusBarColor" tools:targetApi="l">@color/light_gray</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <item name="fontFamily">@font/montserrat</item>
+    </style>
+
+    <style name="Theme.NoWiredStrapInNavigationBar" parent="@style/Theme.Design.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:navigationBarColor">@color/gray</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:background">@drawable/s_rounded_dialog</item>
     </style>
 </resources>
