--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="light_gray">#E7E7E7</color>
     <color name="gray">#F4F4F4</color>
     <color name="lyric_gray">#E6E6E6</color>
+    <color name="lyric_gray_dark">#AEAEAE</color>
     <color name="header_gray">#232323</color>
     <color name="paragraph_gray">#4A4A4A</color>
     <color name="translation_gray">#636363</color>
