--- a/app/src/main/res/layout/fragment_lyric.xml
+++ b/app/src/main/res/layout/fragment_lyric.xml
@@ -16,15 +16,31 @@
         android:paddingBottom="30dp"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:layout_marginBottom="20dp"
+            android:orientation="horizontal"
             android:paddingHorizontal="@dimen/app_padding"
-            android:textColor="?attr/colorPrimaryVariant"
-            android:textSize="17sp"
-            android:text="@string/details"/>
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:textStyle="bold"
+                android:gravity="center|start"
+                android:layout_weight="1"
+                android:textColor="?attr/colorPrimaryVariant"
+                android:textSize="17sp"
+                android:text="@string/details"/>
+
+            <ImageView
+                android:id="@+id/headerArrow"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_arrow_down"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
